style.css
body {
  font-family: Arial;
  max-width: 600px;
  margin: auto;
}

ul {
  list-style: none;
  padding: 0;
}

li {
  display: flex;
  justify-content: space-between;
  padding: 8px;
  border-bottom: 1px solid #ddd;
}

button {
  cursor: pointer;
}

.dark {
  background: #111;
  color: white;
}

